gramatica.txt


GRAMATICA

<programa> -> <codigo>
<codigo> -> <sentencia><codigo> | ''
<sentencia> ->  <ini-var>
                | <if>
                | <while>
                | <read>
                | <write>
                | ''                

<if> -> "if"<condicion> "then" <codigo> "endif;" 
    ||  "if" <condicion> "then" <codigo> "else" <codigo> "endif;"
<condicion> -> "("<valor> <condicional> <valor>")"

<while> -> "while" <condicion> "do" <codigo> "wend;"

<read> -> "read" <variable>";"

<write> -> "write" <valor>";"

<ini-var> -> <variable>"="<valor>
<valor> -> <variable> | <numero> | <operacion> | "("<operacion>")"
<operacion> -> <valor><operador><valor> | ''
<operador> -> "+" | "-" | "*" | "/" | "%"
<condicional> ->  "<", ">", "<=" , ">=" , "==", "!="

<variable> -> "$"<letra><alfanumerico>
<letra> -> a....z
<numero> -> <digito><numero>
<digito> -> 0-1.....9
<alfanumero> = <letra><alfanumerico> | <numero><alfanumerico> | ''


(3+5)*6
operacion
valor operador valor
(operacion) operador valor
(valor operador valor) operador valor
(numero operador numero) operador valor
